2006-08-22  Markus Schoder <lists@gammarayburst.de>

	* CmdExec.cc, commands.cc, QueueFeeder.h: add queue --parallel option.

2006-08-22  Alexander V. Lukyanov <lav@yars.free.net>

	* SMTask.h: drop MakeRef macro, it makes trouble with multiple arg evaluation.

2006-08-08  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc, resource.cc: add mirror:include-regex setting.

2006-08-07  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSetOutput.cc, FileSetOutput.h, commands.cc,
	  FindJobDu.cc, FindJobDu.h: update for new human_readable; use enum
	  for long options.
	* MirrorJob.cc: use enum for long options.
	* ftpclass.cc: load ssl keys for data connection.
	* resource.cc: new setting ftp:ssl-data-use-keys.

2006-08-04  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: disable ssl on errors if not forced.
	* Timer.cc: fix timer chain head corruption.

2006-08-02  Daniel Black <dragonheart@gentoo.org>

	* Makefile.am: fix linking with modules and socks.
	* CmdExec.cc, CmdExec.h, ConnectionSlot.cc, Job.cc: save url returned
	  from GetConnectURL from overwriting by next GetConnectURL call.
	* lftp_ssl.cc: don't free cred if it was not allocated.

2006-08-01  Pascal Bleser <pascal.bleser@skynet.be>

	* Makefile.am: fixed install with modules.

2006-07-28  Alexander V. Lukyanov <lav@yars.free.net>

	* HttpDir.cc: fixed proto comparision when using hftp with ftp url scheme.

2006-07-27  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSet.cc, FileSet.h: optimize FileSet::Merge.
	* NetAccess.cc: make sure FileSet is properly sorted after tilde
	  transformation.

2006-07-26  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: change use_propfind_now in Reconfig.
	* FileAccess.cc: add references to classes which are used in modules,
	  this fixes static compilation.
	* lftp.cc: remove DirColors reference (in FileAccess.cc now).
	* Makefile.am: better use of libtool capabilities.

2006-07-25  Alexander V. Lukyanov <lav@yars.free.net>
